Added the right links and images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="https://github.com/abayomi2010/Bootstrap-Portfolio">My Portfolio</a>
+                <a class="navbar-brand" href="https://github.com/abayomi2010/Bootstrap-Portfolio" id="portfolio">My Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,16 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                    <a class="nav-link" href="#">Welcome <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#portfolio">Welcome <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About </a>
+                        <a class="nav-link" href="#about">About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -46,20 +46,20 @@
 
 
           <!-- Welcome Section- Jumbotron full width header -->
-          <header class="jumbotron jumbotron-fluid bg-secondary">
+          <header class="jumbotron jumbotron-fluid bg-secondary jumb">
             <div class="container">
-                <div class="col-log-11 mx-auto text-white">
-                    <h1 class="display-4">Hello, world!</h1>
-                    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <div class="col-log-11 mx-auto text-white ">
+                    <h1 class="display-3">Hello, my name is <span class="name">Abayomi!</span></h1>
+                    <p class="lead">I am a frontend web devloper</p>
                     <hr class="my-4">
-                    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Call to Action </a>
+                    <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
+                    <a class="btn btn-primary btn-lg" href="#contact" role="button">Contact Me </a>
                 </div>  
             </div>
           </header>
 
           <!-- Work section -->
-          <div class="container">
+          <div class="container" id="work">
             <div class="row d-flex justify-content-around mt-8">
                 <h1 class="my-4">My Work</h1>
             </div>
@@ -68,20 +68,20 @@
             <div class="row justify-content-between text-center mt-8">
                 <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="https://lh3.googleusercontent.com/ogw/AOh-ky2wQYYyChTBXmB_CTVZF2CqIKmad5prNg6IVi7B=s32-c-mo">
+                        <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
-                        <h4 class="card-title">Project</h4>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h4 class="card-title">Bootstrap-Portfolio</h4>
+                        <p class="card-text">Built a portfolio page using HTML and Bootstrap</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Find out more!</a>
+                            <a href="https://github.com/abayomi2010/Bootstrap-Portfolio" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
 
                 <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="https://lh3.googleusercontent.com/ogw/AOh-ky2wQYYyChTBXmB_CTVZF2CqIKmad5prNg6IVi7B=s32-c-mo">
+                        <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
                         <h4 class="card-title">Project</h4>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -96,7 +96,7 @@
             <div class="row justify-content-between text-center mt-8">
                 <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="https://lh3.googleusercontent.com/ogw/AOh-ky2wQYYyChTBXmB_CTVZF2CqIKmad5prNg6IVi7B=s32-c-mo">
+                        <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
                         <h4 class="card-title">Project</h4>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -109,7 +109,7 @@
 
                 <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="https://lh3.googleusercontent.com/ogw/AOh-ky2wQYYyChTBXmB_CTVZF2CqIKmad5prNg6IVi7B=s32-c-mo">
+                        <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
                         <h4 class="card-title">Project</h4>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -133,7 +133,7 @@
                 
                     <div class="col-lg-7 order-lg-1 text-white">
                         <div class="p-5">
-                            <h2 class="display-4">About Me</h2>
+                            <h2 class="display-4" id="about">About Me</h2>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                             <a href="" class="btn btn-outline-light">
                                 <i class="fa-solid fa-download"></i>
@@ -146,7 +146,7 @@
           </section>
 
           <!-- Footer -->
-          <footer>
+          <footer id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center mx-auto">
