--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- Welcome Section- Jumbotron full width header -->
           <header class="jumbotron jumbotron-fluid bg-secondary jumb">
             <div class="container">
-                <div class="col-log-11 mx-auto text-white ">
+                <div class="col-log-11 mx-auto">
                     <h1 class="display-3">Hello, my name is <span class="name">Abayomi!</span></h1>
                     <p class="lead">I am a frontend web devloper</p>
                     <hr class="my-4">
@@ -83,11 +83,11 @@
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
-                        <h4 class="card-title">Project</h4>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h4 class="card-title">TO-do List</h4>
+                        <p class="card-text">Built a to-do list using HTML, CSS and Javascript</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Find out more!</a>
+                            <a href="https://codepen.io/abayomibalogun/pen/MWGKKpL" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
             <div class="container bg-secondary">
                 <div class="row align-items-center">
                     <div class="col-lg-5 order-lg-2">
-                        <img class="img-fluid rounded-circle" src="./images/Screenshot (6).png">
+                        <img class="img-fluid rounded-circle" src="./images/IMG_0635.jpg">
                     </div>
                 
                     <div class="col-lg-7 order-lg-1 text-white">
