--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p class="card-text">Built a portfolio page using HTML and Bootstrap</p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://github.com/abayomi2010/Bootstrap-Portfolio" class="btn btn-primary">Find out more!</a>
+                            <a href="https://github.com/abayomi2010/Bootstrap-Portfolio" target="_blank" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                         <p class="card-text">Built a to-do list using HTML, CSS and Javascript</p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://codepen.io/abayomibalogun/pen/MWGKKpL" class="btn btn-primary">Find out more!</a>
+                            <a href="https://codepen.io/abayomibalogun/pen/MWGKKpL"  target="_blank" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
@@ -98,11 +98,11 @@
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
-                        <h4 class="card-title">Project</h4>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h4 class="card-title">Horiseon redesign for accessibility.</h4>
+                        <p class="card-text">Re-developed the Horiseon webpage to be more semantically written and accessible to meet the requirements of WCAG.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Find out more!</a>
+                            <a href="https://github.com/abayomi2010/Horiseon-Webpage" target="_blank" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
@@ -111,11 +111,11 @@
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
-                        <h4 class="card-title">Project</h4>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h4 class="card-title">My-Landing-Page</h4>
+                        <p class="card-text">Built a static landing page with HTML and CSS</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Find out more!</a>
+                            <a href="https://abayomi2010.github.io/My-Landing-Page/"   target="_blank" class="btn btn-primary">Find out more!</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                         <div class="p-5">
                             <h2 class="display-4" id="about">About Me</h2>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="" class="btn btn-outline-light">
+                            <a href="https://drive.google.com/file/d/1Elncb-kdpg8exiQCH1Ib81CqC6f3_ZYG/view" target="_blank" class="btn btn-outline-light">
                                 <i class="fa-solid fa-download"></i>
                                 Download my Resume
                             </a>
