More links and images

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
                     <div class="col-lg-6 h-100 text-center mx-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item mr-3">
-                                <a href="#">
-                                    <i class="fab fa-linkedin fa-3x fa-fw"></i>
+                                <a href="mailto:abayomibalogun2010@gmail.com" target="_blank">
+                                    <i class="fa fa-envelope-o fa-3x fa-fw" aria-hidden="true"></i>
                                 </a>
                             </li>
 
                             <li class="list-inline-item mr-3">
-                                <a href="#">
+                                <a href="https://mobile.twitter.com/balogunabraham" target="_blank">
                                     <i class="fab fa-twitter-square fa-3x fa-fw"></i>
                                 </a>
                             </li>
 
                             <li class="list-inline-item mr-3">
-                                <a href="#">
+                                <a href="https://github.com/abayomi2010" target="_blank">
                                     <i class="fab fa-github fa-3x fa-fw"></i>
                                 </a>
                             </li>
