Updated the HTML and README file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             
             <div class="row justify-content-between text-center mt-8">
-                <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
+                <div class=" col-lg-6 col-md-4 col-sm-4 mx-auto mb-4">
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
 
-                <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
+                <div class=" col-lg-6 col-md-4 col-sm-4 mx-auto mb-4">
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
@@ -95,12 +95,12 @@
             </div>
 
             <div class="row justify-content-between text-center mt-8">
-                <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
+                <div class=" col-lg-6 col-md-4 col-sm-4 mx-auto mb-4">
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
                         <h4 class="card-title">Horiseon redesign for accessibility.</h4>
-                        <p class="card-text">Re-developed the Horiseon webpage to be more semantically written and accessible to meet the requirements of WCAG.</p>
+                        <p class="card-text">Re-developed the Horiseon webpage to be more semantically written</p>
                         </div>
                         <div class="card-footer">
                             <a href="https://github.com/abayomi2010/Horiseon-Webpage" target="_blank" class="btn btn-primary">Find out more!</a>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class=" col-lg-6 col-md-6 col-sm-4 mx-auto mb-4">
+                <div class=" col-lg-6 col-md-4 col-sm-4 mx-auto mb-4">
                     <div class="card">
                         <img class="card-img-top" src="https://placehold.co/600x400">
                         <div class="card-body">
